let { join } = require('path')

let run = require('../run')

const ROOT = join(__dirname, '..', '..', '..')

function createProcess (fixture, args = []) {
  let history = {
    exitCode: 0,
    stdout: '',
    stderr: ''
  }
  let process = {
    argv: ['node', 'size-limit', ...args],
    cwd () {
      if (fixture.includes('/')) {
        return fixture
      } else {
        return join(__dirname, 'fixtures', fixture)
      }
    },
    exit (code) {
      history.exitCode = code
    },
    stdout: {
      write (str) {
        history.stdout += str.split(ROOT).join('')
      }
    },
    stderr: {
      write (str) {
        history.stderr += str.split(ROOT).join('')
      }
    }
  }
  return [process, history]
}

async function check (fixture, args) {
  let [process, history] = createProcess(fixture, args)
  await run(process)
  expect(history.stderr).toEqual('')
  expect(history.exitCode).toEqual(0)
  return history.stdout
}

async function error (fixture, args) {
  let [process, history] = createProcess(fixture, args)
  await run(process)
  expect(history.stdout).toEqual('')
  expect(history.exitCode).toEqual(1)
  return history.stderr
}

it('shows version', async () => {
  let out = await check('file', ['--version'])
  expect(out).toMatch(/^size-limit \d+.\d+.\d+\n$/m)
})

it('shows help', async () => {
  let out = await check('file', ['--help'])
  expect(out).toContain('Core options:')
  expect(out).not.toContain('Webpack options:')
})

it('shows webpack-related help', async () => {
  let out = await check('webpack', ['--help'])
  expect(out).toContain('Core options:')
  expect(out).toContain('Webpack options:')
})

it('uses dependencies to detect modules', async () => {
  let out = await check('dependencies', ['--help'])
  expect(out).toContain('Webpack options:')
})

it('shows error on missed package.json', async () => {
  expect(await error('/')).toMatchSnapshot()
})

it('shows syntax errors in package.json', async () => {
  let stderr = await error('package-syntax')
  expect(stderr).toContain('ERROR')
  expect(stderr).toContain('JSONError')
})

it('shows error in JSON format', async () => {
  let [process, history] = createProcess('/', ['--json'])
  await run(process)
  expect(history.exitCode).toEqual(1)
  expect(history.stderr).toEqual('')
  let output = JSON.parse(history.stdout)
  expect(Object.keys(output)).toEqual(['error'])
  expect(output.error).toContain('SizeLimitError: Size Limit did’t find')
})

it('shows migration guide for npm users', async () => {
  expect(await error('legacy-npm')).toMatchSnapshot()
})

it('shows migration guide for yarn users', async () => {
  expect(await error('legacy-yarn')).toMatchSnapshot()
})

it('throws on unknown argument', async () => {
  expect(await error('file', ['--unknown'])).toMatchSnapshot()
})

it('throws on --why argument without webpack', async () => {
  expect(await error('file', ['--why'])).toMatchSnapshot()
})

it('throws on other webpack arguments without webpack', async () => {
  expect(await error('file', ['--webpack-config', 'a'])).toMatchSnapshot()
})
