// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error on missed package.json 1`] = `
"[41m[30m ERROR [39m[49m [31mSize Limit did’t find [33mpackage.json[31m.[39m
[31m        Create npm package and run Size Limit there.[39m
"
`;

exports[`shows migration guide for npm users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33mnpm install --save-dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33mnpm install --save-dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33mnpm install --save-dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m
"
`;

exports[`shows migration guide for yarn users 1`] = `
"[31mInstall Size Limit preset depends on type of the project[39m

For application, where you send JS bundle directly to users
  [33myarn add --dev @size-limit/preset-app[39m
For frameworks, components and big libraries
  [33myarn add --dev @size-limit/preset-big-lib[39m
For small (< 10 KB) libraries
  [33myarn add --dev @size-limit/preset-small-lib[39m
Check out docs for more comlicated cases
  [33mhttps://github.com/ai/size-limit/[39m

You can remove size-limit dependency: [33myarn remove size-limit[39m
"
`;

exports[`throws on --why argument without webpack 1`] = `
"[41m[30m ERROR [39m[49m [31mArgument [33m--why[31m works only with [33m@size-limit/webpack[31m module.[39m
[31m        You can add Bundle Analyzer to you own bundler.[39m
"
`;

exports[`throws on other webpack arguments without webpack 1`] = `
"[41m[30m ERROR [39m[49m [31mArgument [33m--webpack-config[31m works only with [33m@size-limit/webpack[31m module[39m
"
`;

exports[`throws on unknown argument 1`] = `
"[41m[30m ERROR [39m[49m [31mUknown argument [33m--unknown[31m.[39m
[31m        Check command for typo and read docs.[39m
"
`;
